@@ -29,7 +29,6 @@ import java.util.BitSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnegative;
 import javax.annotation.Nullable;
 import owl.automaton.Automaton;
@@ -471,7 +470,7 @@ abstract class DependencyTree<T> {
       return children.stream()
         .map(DependencyTree::getAcceptanceExpression)
         .distinct()
-        .collect(Collectors.toList());
+        .toList();
     }
 
     @Override
